--- a/src/App.css
+++ b/src/App.css
@@ -31,5 +31,16 @@ a {
   }
 
   .box{
-    width: 50%;
+    margin: auto;
+    width: 400px;
+    height: 400px;
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  .boxtext{
+    position: relative;
+    top: 100px;
   }
