--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color:#E0E0E0;
+  background-color: #e0e0e0;
 }
 
 a {
@@ -16,31 +15,30 @@ a {
 * {
   box-sizing: border-box;
 }
-  
 
-  .text{
-    font-weight:normal;
-  }
-  
-  .button{
-    background:none;
-    border:none;
-    font-size: 32px;
-    position:relative;
-    top: 50px;
-  }
+.text {
+  font-weight: normal;
+}
 
-  .box{
-    margin: auto;
-    width: 400px;
-    height: 400px;
-    border: 1px solid black;
-    padding: 10px;
-    text-align: center;
-    vertical-align: middle;
-  }
+.button {
+  background: none;
+  border: none;
+  font-size: 32px;
+  position: relative;
+  top: 50px;
+}
 
-  .boxtext{
-    position: relative;
-    top: 100px;
-  }
+.box {
+  margin: auto;
+  width: 400px;
+  height: 400px;
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.boxtext {
+  position: relative;
+  top: 100px;
+}
