--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    background-color:#E0E0E0;
+  background-color: #e0e0e0;
 }
 
 a {
@@ -15,36 +15,35 @@ a {
 * {
   box-sizing: border-box;
 }
-  
 
-  .text{
-    font-weight:normal;
-  }
-  
-  .button{
-    background:none;
-    border:none;
-    font-size: 32px;
-    position:relative;
-    top: 50px;
-  }
+.text {
+  font-weight: normal;
+}
 
-  .container {
-    min-height: 100vh;
-    padding: 0 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color:#E0E0E0;
-  }
-  
-  .main {
-    padding: 5rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.button {
+  background: none;
+  border: none;
+  font-size: 32px;
+  position: relative;
+  top: 50px;
+}
+
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #e0e0e0;
+}
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
